--- a/src/components/Users/users.css
+++ b/src/components/Users/users.css
@@ -54,9 +54,7 @@
   cursor: pointer;
   background-color: #f2f2f2;
 }
-/* .users-table tr:nth-child(even) {
-  background-color: #f2f2f2;
-} */
+
 .users-table button {
   background-color: #f44336;
   color: white;
